Migrate to java 11 and jakartaee 10